--- a/MVCArchitecture/MVCArchitecture.csproj
+++ b/MVCArchitecture/MVCArchitecture.csproj
@@ -45,17 +45,33 @@
   <ItemGroup>
     <Compile Include="Connection.cs" />
     <Compile Include="Controllers\CountryController.cs" />
+    <Compile Include="Controllers\DepartementController.cs" />
+    <Compile Include="Controllers\EmployeeController.cs" />
+    <Compile Include="Controllers\JobController.cs" />
+    <Compile Include="Controllers\LocationController.cs" />
     <Compile Include="Controllers\RegionController.cs" />
     <Compile Include="Models\Country.cs" />
+    <Compile Include="Models\Departement.cs" />
+    <Compile Include="Models\Employee.cs" />
+    <Compile Include="Models\History.cs" />
+    <Compile Include="Models\Job.cs" />
+    <Compile Include="Models\Location.cs" />
     <Compile Include="Models\Region.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\ViewCountry.cs" />
+    <Compile Include="Views\ViewDepartement.cs" />
+    <Compile Include="Views\ViewEmployee.cs" />
+    <Compile Include="Views\ViewHistory.cs" />
+    <Compile Include="Views\ViewJob.cs" />
+    <Compile Include="Views\ViewLocation.cs" />
     <Compile Include="Views\ViewRegion.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Compile Include="Controllers\HistoryController.cs" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
